Se corrige como obtener/mostrar los datos en las graficas